@@ -2,18 +2,19 @@ package com.example.demo.service.search;
 
 import com.example.demo.model.Dish;
 import com.example.demo.repository.DishRepository;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class DatabaseSearchService {
 
-    @Autowired
-    private DishRepository dishRepository;
+    private final DishRepository dishRepository;
+
+    public DatabaseSearchService(DishRepository dishRepository) {
+        this.dishRepository = dishRepository;
+    }
 
     public List<Dish> search(String keywords, int limit) {
         if (keywords == null || keywords.trim().isEmpty()) {
@@ -21,16 +22,12 @@ public class DatabaseSearchService {
         }
 
         List<Dish> allDishes = dishRepository.findByIsDeletedFalse();
-        
         String lowerKeywords = keywords.toLowerCase().trim();
-        
+
         return allDishes.stream()
-                .filter(dish -> {
-                    String dishName = dish.getName().toLowerCase();
-                    return dishName.contains(lowerKeywords);
-                })
+                .filter(dish -> dish.getName().toLowerCase().contains(lowerKeywords))
                 .limit(limit)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public boolean isAvailable() {
